- Fix for admin sidebar header lables not displaying full width on small width browsers

--- a/templates/admin/css/style.css
+++ b/templates/admin/css/style.css
@@ -144,6 +144,7 @@ overflow:hidden;
 }
 
 .accordion-heading {
+	width:100%;
     position: relative;
 	background-color:#222222;
 	color:#ffffff;
